changed to hashrouter

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-kabzda-1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://katkap22.github.io/Social_network",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
